# ELL715_Assignment_5

./: .gitattributes  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
Report/: comment.cut  main.aux  main.blg  main.out  main.tex
docs/: ACM_guide.md  Assignment_guidelines.md  IMPLEMENTATION.md  USAGE.md  Viola-Jones-Paper.md
notebooks/: 01_dataset_exploration.ipynb  02_haar_features_demo.ipynb  03_adaboost_training.ipynb  04_cascade_training.ipynb  05_detection_demo.ipynb  06_v2_training.ipynb  07_v2_cascade.ipynb  08_v2_detection_demo.ipynb  09_v2_cascade_detection_demo.ipynb
results/: v1_vs_v2_comparison.csv  v2_adaboost_vs_cascade.csv
scripts/: generate_report_figures.py
src/classifiers/: adaboost.py  cascade.py  weak_classifier.py
src/data/: dataset_generator.py
src/detector/: sliding_window.py
src/features/: haar_features.py  integral_image.py
src/utils/: __init__.py  evaluation.py
tests/: test_integral_image.py
